--- a/24s_tku/pr14.htm
+++ b/24s_tku/pr14.htm
@@ -12,13 +12,14 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>(85%)現場參與期末考環境測試，並且解出至少一題測試題。</li>
 	<li>(15%)當日 09:15 前到課，或於該時間前於 Teams 上告知欲請假。</li>
+	<li>(0%)自行閱讀完期末考規則後，找教師領取下一題環境測試的網址。領取前，教師會詢問你期末考規則的相關內容，答對後才可領取網址。</li>
+	<li>(85%)現場參與期末考環境測試，並且解出至少一題測試題。</li>
 	<li>加分項目
 		<ul>
 			<li>(10%)解出兩題測試題。</li>
-			<li>(5%)在登入狀態下，觸發系統的某一安全檢查機制。提示：線索在登入頁面。</li>
-			<li>(5%)在登入狀態下，觸發系統的另一安全檢查機制。提示：線索在題目列表頁面。</li>
+			<li>(10%)在登入狀態下，觸發系統的某一安全檢查機制。提示：線索在登入頁面。</li>
+			<li>(10%)在登入狀態下，觸發系統的另一安全檢查機制。提示：線索在題目列表頁面。</li>
 		</ul>
 	</li>
 </ul>
@@ -27,6 +28,7 @@
 
 <ul>
 	<li>告知欲請假者，教師亦可能視情況要求你正式請假，或者提出相關佐證。</li>
+	<li>第二題未完成者，不予採計本練習後續題目的分數。</li>
 	<li>原則上，教師於本次練習中，不會到你的位置旁邊檢查，請各位於離開教室前，主動找教師確認分數。</li>
 </ul>
 
