--- a/24s_tku/finalImpRules.htm
+++ b/24s_tku/finalImpRules.htm
@@ -19,7 +19,7 @@
 			<li>依照座位表入座。</li>
 			<li>允許：參考紙本或線上資料、以圖文方式詢問 chatGPT，或者以電子形式收發圖文訊息。</li>
 			<li>禁止：以有聲或實體的方式收發訊息，包含但不限於發送或收看有聲影片或語音留言、傳紙條、敲打摩斯密碼。</li>
-			<li>除發生地震等災害外，離開教室前須經過教師允許。</li>
+			<li>除有客觀上需進行緊急避難之狀況外，離開教室前須經過教師允許。</li>
 		</ul>
 	</li>
 	<br>
