--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -22,8 +22,7 @@
 			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a>(小龜)<br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
 		</td>
 		<td width=49% align=center>
-			<!--span class="myTitle">助教：林元鴻<br><script>emailDisplay("a0909306586", "gmail", "com");</script></span-->
-			<span class="myTitle">助教：未定<br><script>emailDisplay("not_sure", "unknown", "com");</script></span>
+			<span class="myTitle">助教：李思諭<br><script>emailDisplay("20sharon35", "gmail", "com");</script></span>
 		</td>
 	</tr>
 </table>
@@ -35,10 +34,10 @@
 	<tr><th align="left" colspan=2 style="border-bottom-width:2;border-bottom-color:black">課程公布欄</th></tr>
 	<tr><th class="thLeft" align=center>發佈日期</th><th class="thRight" align=center>內容</th></tr>
 	<tr>
-		<td class="tdLeft">06/11</td>
+		<td class="tdLeft">08/16</td>
 		<td class="tdRight">
 			<ul>
-				<li>eeclass 連結：<a href="#">https://eeclass.nthu.edu.tw/course/???</a></li>
+				<li>eeclass 連結：<a href="https://eeclass.nthu.edu.tw/course/23284">https://eeclass.nthu.edu.tw/course/23284</a></li>
 				<li>進度細節會視情況調整，隨堂練習及作業未於課堂正式宣布前皆為暫定。</li>
 			</ul>
 		</td>
@@ -62,7 +61,7 @@
 		</td>
 		<td class="tdRight">
 			<a href="prAndHwRules.htm">隨堂練習及作業總則</a><br>
-			<a href="#">隨堂練習 01</a><br>
+			<a href="pr01.htm">隨堂練習 01</a><br>
 		</td>
 	</tr>
 
