--- a/24f_math/courseIntro.htm
+++ b/24f_math/courseIntro.htm
@@ -27,10 +27,10 @@
 
 	<li>其他注意事項
 		<ul>
-			<li>成績最高給至百分制 99。</li>
+			<li>成績最高給至百分制 99，小數取整時除 [59, 60) 及 [89, 90) 區間為無條件捨去外，其餘為四捨五入。</li>
 			<li>寄信給教師時，須寄送至課程網頁頂端所示之信箱。除教師另有要求外，寄送至其餘信箱之信件不保證處理速度。</li>
 			<li>若因故不能到課，乃至於可能影響分數時，應盡速向教師報告狀況與提出討論，教師亦將視情況要求提供證明或辦理正式請假手續。</li>
-			<li>各項規則若有異動時另行公告，如有疑異或缺漏時，原則上以教師主觀認定為準。</li>
+			<li>各項規則若有異動時另行公告，如認為有疑異或缺漏時，你應事先詢問。</li>
 		</ul>
 	</li>
 	<br>
