--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -19,7 +19,7 @@
 <table cellspacing="0" border=0>
 	<tr>
 		<td width=49% align=center>
-			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a>(小龜)<br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
+			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a><br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
 		</td>
 		<td width=49% align=center>
 			<span class="myTitle">助教：李思諭<br><script>emailDisplay("20sharon35", "gmail", "com");</script></span>
