--- a/24f_math/prAndHwRules.htm
+++ b/24f_math/prAndHwRules.htm
@@ -24,7 +24,7 @@
 	<li>期中作業 demo 規定
 		<ul>
 			<li>時間：原定課堂時間。課前及課後時間另視情況開放預約。</li>
-			<li>地點：原上課教室。課前及課後之地點另定。</li>
+			<li>地點：原上課教室。若有開放課前及課後時段時，地點另定。</li>
 			<li>方式：教師或助教依事前公布之順序叫號，同學到教師或助教座位旁進行說明。</li>
 			<li>Demo 時，需解釋程式與回答問題，視狀況給分。</li>
 			<li>當日課堂時間未能 demo 者：
@@ -50,7 +50,10 @@
 	<li>除題目允許外，禁止以「import」或其他任何方式載入函式庫。</li>
 	<br>
 
-	<li>以上若有異動時另行公告。如你認為有疑異或缺漏時，應事先詢問。</li>
+	<li>因教師個人設備之系統因素，若遇有需上傳至 eeclass 等系統繳交之題目時（將主要是期中作業），請以 Python 3.6 語法為主，並避免在該題目中使用 Python 3.7 以上之特殊語法，例如 type hint 與 match-case。</li>
+	<br>
+
+	<li>若各別作業之規則跟上述內容衝突時，原則上依各別作業之規則為準。</li>
 	<br>
 
 </ul>
