--- a/24f_math/pr01.htm
+++ b/24f_math/pr01.htm
@@ -29,6 +29,7 @@
 <ul>
 	<li>排隊 demo 請使用<a href="https://forms.gle/UYCjniKwNNVHyp4K6">此連結</a>。</li>
 	<li>修課問卷不於課堂現場檢查，填寫期限至 09/12（四）08:00 截止，該時間之後隨時會關閉問卷並不再接受填答。</li>
+	<li>等待加簽者之加簽申請，教師會等到申請者填完修課問卷後，再決定是否核准。未及時填寫者，一律不予加簽。</li>
 	<li>Demo 時的問題，會包含請你說明題目若改變時，程式應如何修改，例如「改成判斷 3 的倍數時應該怎麼做」。</li>
 </ul>
 
