--- a/24f_math/prAndHwRules.htm
+++ b/24f_math/prAndHwRules.htm
@@ -15,7 +15,6 @@
 			<li>時間：當週課堂時間。</li>
 			<li>地點：原上課教室。</li>
 			<li>方式：完成練習後通知教師或助教，教師或助教有空時會立即前往查看。</li>
-			<li>Demo 時，需解釋程式與回答問題，視狀況給分。</li>
 			<li>當日未能 demo 者不給分，請假者另行討論。</li>
 		</ul>
 	</li>
@@ -26,7 +25,6 @@
 			<li>時間：原定課堂時間。課前及課後時間另視情況開放預約。</li>
 			<li>地點：原上課教室。若有開放課前及課後時段時，地點另定。</li>
 			<li>方式：教師或助教依事前公布之順序叫號，同學到教師或助教座位旁進行說明。</li>
-			<li>Demo 時，需解釋程式與回答問題，視狀況給分。</li>
 			<li>當日課堂時間未能 demo 者：
 				<ul>
 					<li>能於次一週課堂時間 demo 者，以八折計分。</li>
@@ -39,18 +37,16 @@
 	</li>
 	<br>
 
-	<!--li>其他共通規定：
-		<ul>
-			<li>須上傳符合個別作業規定之原始碼(*.py)至 eeclass 指定位置。</li>
-			<li>因系統因素，教師將以 Python 3.6 進行作業評分，故請勿在作業中使用 Python 3.7 以上之特殊語法，例如 type hint 與 match-case。</li>
-		</ul>
-	</li>
-	<br-->
+	<li>Demo 時，需解釋程式與回答問題，視狀況給分。</li>
+	<br>
+
+	<li>程式碼必須撰寫於副檔名為 py 的純文字檔，並讓 Python 直接執行該文字檔。開啟 Python 後逐行輸入者，或者使用 Jupyter Notebook 者，教師得不予採計其分數。</li>
+	<br>
 
 	<li>除題目允許外，禁止以「import」或其他任何方式載入函式庫。</li>
 	<br>
 
-	<li>因教師個人設備之系統因素，若遇有需上傳至 eeclass 等系統繳交之題目時（將主要是期中作業），請以 Python 3.6 語法為主，並避免在該題目中使用 Python 3.7 以上之特殊語法，例如 type hint 與 match-case。</li>
+	<li>因教師個人設備之系統因素，若遇有需上傳至 eeclass 等系統繳交之題目時（將主要是期中作業），請以 Python 3.6 語法，即教材中有出現的語法為主，並避免在該題目中使用 Python 3.7 以上之特殊語法，例如 type hint 與 match-case。</li>
 	<br>
 
 	<li>若各別作業之規則跟上述內容衝突時，原則上依各別作業之規則為準。</li>
