--- a/24f_math/pr01.htm
+++ b/24f_math/pr01.htm
@@ -14,7 +14,7 @@
 	<li>有攜帶筆電，並願意當場安裝開發環境及接受教師或助教檢查安裝正確性者：
 		<ul>
 			<li>利用 print 印出你的學號和姓名（20%）</li>
-			<li>設定一個變數，內容是一個三位正整數，並將該變數跟 10 的整數次方做一或多次運算，以個別取得其三個位數之值，例如 816 應取得 8，1 以及 6（20%）</li>
+			<li>設定一個變數，內容是一個小於一千的正整數，並將該變數跟 10 的整數次方做一或多次運算，以個別取得其三個位數之值，例如 816 應取得 8，1 以及 6（20%）</li>
 			<li>承上題，將取得的三個數字加起來，再除以 9 取餘數，以判斷原來的三位正整數是否為 9 的倍數。提示：你可以將此結果跟「把原來的三位正整數直接除以 9 取餘數」比較，若有不同就是出錯了（20%）</li>
 			<li>填寫<a href="https://forms.gle/j3j4dL4bgVvSXVaM9">修課問卷</a>（20%）</li>
 			<li>安裝環境檢查（20%）</li>
