--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -71,7 +71,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">條件判斷；數學函式庫；自訂函式</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr02.htm">隨堂練習 02</a><br>
 		</td>
 	</tr>
 
