--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -72,6 +72,7 @@
 		</td>
 		<td class="tdRight">
 			<a href="pr02.htm">隨堂練習 02</a><br>
+			<a href="selfpr01.htm">自我練習 01</a><br>
 		</td>
 	</tr>
 
