--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -79,32 +79,33 @@
 	<tr>
 		<td class="tdLeft">W03: 09/19</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">串列</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">自訂函式；串列（基本介紹）；串列（排序）</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr03.htm">隨堂練習 03</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W04: 09/26</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">字典（基本介紹）；迴圈（基本介紹）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">串列（容易出問題的寫法）；字典（基本介紹）；迴圈（基本介紹）</a><br>
 			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字典（容易出問題的寫法）；集合</a>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			隨堂練習 04
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W05: 10/03</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（簡單應用範例）；Comprehension；Zip、map，與 filter</a><br>
-			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（簡單應用範例）</a>
+			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（基本介紹）；迴圈（簡單應用範例）；Comprehension</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">LeetCode 注意事項整理；模組；Zip、map，與 filter</a>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			隨堂練習 05<br>
+			期中作業一
 		</td>
 	</tr>
 
@@ -112,7 +113,6 @@
 		<td class="tdLeft">W06: 10/10</td>
 		<td class="tdMid">
 			雙十節停課<br>
-			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">LeetCode 注意事項整理；模組</a><br>
 		</td>
 		<td class="tdRight">
 			&nbsp;
