--- a/24f_math/selfpr01.htm
+++ b/24f_math/selfpr01.htm
@@ -25,7 +25,7 @@
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
-	<li>必須由以下範例修改。你能修改的部分，只有標示為「pass」的部份（即函式內容），以及測試時可以修改傳入的值。
+	<li>必須由以下範例修改。你能修改的部分，只有標示為「pass」的部份（即函式內容）、測試時可以修改傳入的值，以及新增其他用於被這三個 function 呼叫的 function。
 <pre class="brush: py">
 def is_mul_of_eleven(n):
 	pass
