--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -89,7 +89,7 @@
 	<tr>
 		<td class="tdLeft">W04: 09/26</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">串列（容易出問題的寫法）；字典（基本介紹）；迴圈（基本介紹）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">串列（容易出問題的寫法）；字典（基本介紹）；LeetCode 注意事項整理；迴圈（基本介紹）</a><br>
 			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字典（容易出問題的寫法）；集合</a>
 		</td>
 		<td class="tdRight">
@@ -101,7 +101,7 @@
 		<td class="tdLeft">W05: 10/03</td>
 		<td class="tdMid">
 			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（基本介紹）；迴圈（簡單應用範例）；Comprehension</a><br>
-			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">LeetCode 注意事項整理；模組；Zip、map，與 filter</a>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">模組；Zip、map，與 filter</a>
 		</td>
 		<td class="tdRight">
 			隨堂練習 05<br>
