--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -89,11 +89,11 @@
 	<tr>
 		<td class="tdLeft">W04: 09/26</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">串列（容易出問題的寫法）；字典（基本介紹）；LeetCode 注意事項整理；迴圈（基本介紹）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">串列（容易出問題的寫法）；LeetCode 注意事項整理；字典（基本介紹）；迴圈（基本介紹）</a><br>
 			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字典（容易出問題的寫法）；集合</a>
 		</td>
 		<td class="tdRight">
-			隨堂練習 04
+			<a href="pr04.htm">隨堂練習 04</a>
 		</td>
 	</tr>
 
