--- a/24f_math/hwmt1.htm
+++ b/24f_math/hwmt1.htm
@@ -28,7 +28,7 @@
 
 <ul>
 	<li><a href="hwmt1-1.htm">Q1: League of Legends</a>。</li>
-	<li><a href="hwmt1-2.htm">Q2: ...</a>。</li>
+	<li><a href="hwmt1-2.htm">Q2: Will You Survive?</a>。</li>
 	<li><a href="hwmt1-3.htm">Q3: ...</a>。</li>
 	<li>Q4: 請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/most-frequent-even-element/">2404. Most Frequent Even Element</a>。
 		<ul>
