--- a/24f_math/hwmt1-1.htm
+++ b/24f_math/hwmt1-1.htm
@@ -29,7 +29,7 @@
 曾經有人在某遊戲的比賽賽程中途，做了如下的預測：<br><br>
 <center><img src="pics/lol.png"></center><br><br>
 
-請你撰寫一個函式 game_pred，輸入 A 隊韓國人人數、A 隊東南亞人人數、B 隊韓國人人數，以及 B 隊東南亞人人數，來根據上圖的規則做出勝負預測。請注意，你的程式不應受到該遊戲每隊人數 5 人的限制。
+請你撰寫一個函式 game_pred，輸入參數依序為 A 隊韓國人人數、A 隊東南亞人人數、B 隊韓國人人數，以及 B 隊東南亞人人數，來根據上圖的規則做出勝負預測。請注意，你的程式不應受到該遊戲每隊人數 5 人的限制。
 
 <p style="background-color:#f99;font-size:17pt">輸入說明</p>
 四個非負整數，依次代表 A 隊韓國人人數、A 隊東南亞人人數、B 隊韓國人人數，以及 B 隊東南亞人人數。
@@ -38,7 +38,7 @@
 回傳一個整數，-1 代表 A 隊勝，0 代表無法依據規則預測，1 代表 B 隊勝。
 
 <p style="background-color:#f99;font-size:17pt">Sample Input</p>
-[12, 34, 56, 78]
+12, 34, 56, 78
 
 <p style="background-color:#f99;font-size:17pt">Sample Output</p>
 1
