--- a/24f_math/hwmt1.htm
+++ b/24f_math/hwmt1.htm
@@ -5,10 +5,10 @@
 	<link rel=stylesheet type="text/css" href="myCss.css">
 	<base target="_blank">
 	<script type="text/javascript">
-		input = prompt('Enter passwrd:')
-		if(input!='0800092000'){
-			document.removeChild(document.documentElement);
-		}
+		// input = prompt('Enter passwrd:')
+		// if(input!='0800092000'){
+		// 	document.removeChild(document.documentElement);
+		// }
 	</script>
 </head>
 <body bgcolor="#ccccff">
@@ -21,7 +21,8 @@
 	<li>繳交方式: eeclass 作業上傳區，檔名規定詳如各題說明</li>
 	<li>Demo 時間地點: 10/?? 原上課時段於原教室</li>
 	<li>Pylint Bonus: 5 分</li>
-	<li>評分方式: 各題滿分皆為 100，本作業總分為 (&Sigma;<sub>i</sub>(第 i 題正確性 * 第 i 題 demo / 100)) / 4 + Pylint Bonus</li>
+	<li>Speed Bonus: 5 分</li>
+	<li>評分方式: 各題滿分皆為 100，本作業總分為 (&Sigma;<sub>i</sub>(第 i 題正確性 * 第 i 題 demo / 100)) / 4 + Pylint Bonus + Speed Bonus</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
@@ -29,11 +30,30 @@
 <ul>
 	<li><a href="hwmt1-1.htm">Q1: League of Legends</a>。</li>
 	<li><a href="hwmt1-2.htm">Q2: Will You Survive?</a>。</li>
-	<li><a href="hwmt1-3.htm">Q3: ...</a>。</li>
+	<li>Q3: 請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/number-of-distinct-averages/">2465. Number of Distinct Averages</a>。
+		<ul>
+			<li>檔名必須為「q3_你的學號.py」，例如 q3_9962816.py。</li>
+			<li>語言請選 Python3，Class 及 function 名稱請依 LeetCode 規定。</li>
+			<li>繳交作業時請把檔案開頭加上「from typing import List」，且除此之外，檔案內若有任何不屬於 class 中的程式碼，應包含在「if __name__ == '__main__':」當中，否則可能會有折扣。</li>
+			<li>本課程評分用測資有兩組，如下：
+				<ul>
+					<li>正確性評分用測資一組，內容符合 LeetCode 規定，通過此組測資者可拿到本題全部的正確性分數。</li>
+					<li>Speed Bonus 評分用測資一組。你必須用相同程式碼
+						<ul>
+							<li>除 nums.length 必為正偶數外，無其他限制。</li>
+							<li>你必須用相同程式碼，同時通過「正確性評分用測資」和「Speed Bonus 評分用測資」的正確性檢驗，才能取得本 bonus 分數。</li>
+							<li>依班級整體排名狀況，來決定給分數字。</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+		</ul>
+	</li>
 	<li>Q4: 請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/most-frequent-even-element/">2404. Most Frequent Even Element</a>。
 		<ul>
 			<li>檔名必須為「q4_你的學號.py」，例如 q4_9962816.py。</li>
-			<li>class 及 function 名稱請依 LeetCode 規定，檔案內若有任何不屬於 class 中的程式碼，應包含在「if __name__ == '__main__':」當中，否則可能會有折扣。</li>
+			<li>語言請選 Python3，Class 及 function 名稱請依 LeetCode 規定。</li>
+			<li>繳交作業時請把檔案開頭加上「from typing import List」，且除此之外，檔案內若有任何不屬於 class 中的程式碼，應包含在「if __name__ == '__main__':」當中，否則可能會有折扣。</li>
 			<li>本課程評分用測資僅一組，內容符合 LeetCode 之規定。</li>
 		</ul>
 	</li>
@@ -41,11 +61,13 @@
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
+	<li>每題給分最小單位為一組測資，一組測資包含多筆（一筆為一個輸入&輸出的配對），每組的所有測資全對，才會拿到該組測資的分數。</li>
 	<li>Pylint Bonus
 		<ul>
-			<li>每題評分指令皆為「pylint --disable=C0103,C0301,C0111,R0201,R1705,C1801,R0903 your_file.py」。評分結果以教師安裝的版本(2.2.2)為準。</li>
-			<li>每題給分方式為 max(pylint-score, 0)，整體分數取 sorted(各題分數)[1] 乘以 0.5。</li>
+			<li>每題評分指令皆為「pylint --disable=C0103,C0111,C0114,C0116,C0301,C1801,R0903,R0911,R1705 your_file.py」。評分結果以教師安裝的版本(3.3.0)為準。</li>
+			<li>每題給分方式為 max(pylint-score, 0)，整體分數取各題分數中位數乘以 0.5。</li>
 			<li>若在程式碼中，有試圖關閉或避開評分指令未列出的扣分項目等行為時，本 bonus 不給分。</li>
+			<li>有可能會在期中作業二變成基本分。</li>
 		</ul>
 	</li>
 </ul>
