rule minor update

--- a/24f_math/pr04.htm
+++ b/24f_math/pr04.htm
@@ -21,7 +21,7 @@
 	<li>(30%)解答此 LeetCode 問題：<a href="https://leetcode.com/problems/convert-the-temperature/">2469. Convert the Temperature</a>。</li>
 	<li>(30%)解答此 LeetCode 問題：<a href="https://leetcode.com/problems/smallest-even-multiple/">2413. Smallest Even Multiple</a>。
 		<ul>
-			<li>(5% bonus)不能使用 if-else 或任何類似具條件判斷效果之語法。</li>
+			<li>(5% bonus)只使用一行程式來解出此題，並且不得使用 if-else 或任何類似具條件判斷效果之語法。</li>
 		</ul>
 	</li>
 	<li>(30%)解答此 LeetCode 問題：<a href="https://leetcode.com/problems/add-digits/">258. Add Digits</a>。
