--- a/24f_math/hwmt1.htm
+++ b/24f_math/hwmt1.htm
@@ -5,10 +5,10 @@
 	<link rel=stylesheet type="text/css" href="myCss.css">
 	<base target="_blank">
 	<script type="text/javascript">
-		input = prompt('Enter passwrd:')
-		if(input!='0800092000'){
-			document.removeChild(document.documentElement);
-		}
+		// input = prompt('Enter passwrd:')
+		// if(input!='0800092000'){
+		// 	document.removeChild(document.documentElement);
+		// }
 	</script>
 </head>
 <body bgcolor="#ccccff">
@@ -17,9 +17,9 @@
 
 <p style="background-color:#f99;font-size:17pt">作業資訊</p>
 <ul>
-	<li>Deadline: 10/??</li>
+	<li>Deadline: 10/21 08:00</li>
 	<li>繳交方式: eeclass 作業上傳區，檔名規定詳如各題說明</li>
-	<li>Demo 時間地點: 10/?? 原上課時段於原教室</li>
+	<li>Demo 時間地點: 10/24 原上課時段於原教室，另視情況使用課前與課後時段</li>
 	<li>Pylint Bonus: 5 分</li>
 	<li>Speed Bonus: 5 分</li>
 	<li>評分方式: 各題滿分皆為 100，本作業總分為 (&Sigma;<sub>i</sub>(第 i 題正確性 * 第 i 題 demo / 100)) / 4 + Pylint Bonus + Speed Bonus</li>
@@ -66,7 +66,7 @@
 		<ul>
 			<li>每題評分指令皆為「pylint --disable=C0103,C0111,C0114,C0116,C0301,C1801,R0903,R0911,R1705 your_file.py」。評分結果以教師安裝的版本(3.3.0)為準。</li>
 			<li>每題給分方式為 max(pylint-score, 0)，整體分數取各題分數中位數乘以 0.5。</li>
-			<li>若在程式碼中，有試圖關閉或避開評分指令未列出的扣分項目等行為時，本 bonus 不給分。</li>
+			<li>若在任一題的程式碼中，有試圖關閉或避開評分指令未列出的評比項目等行為時，本 bonus 不給分。</li>
 			<li>有可能會在期中作業二變成基本分。</li>
 		</ul>
 	</li>
