--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -100,11 +100,12 @@
 	<tr>
 		<td class="tdLeft">W05: 10/03</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（基本介紹）；迴圈（簡單應用範例）；Comprehension</a><br>
-			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">模組；Zip、map，與 filter</a>
+			颱風假，線上非同步授課：<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（基本介紹）</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（簡單應用範例）</a><br>
+			建議預習：<a href="https://geniusturtle6174.github.io/tutor_python">Comprehension；Zip、map，與 filter</a>
 		</td>
 		<td class="tdRight">
-			隨堂練習 05<br>
+			<a href="pr05.htm">隨堂練習 05</a><br>
 			<a href="hwmt1.htm">期中作業一</a>
 		</td>
 	</tr>
@@ -122,18 +123,17 @@
 	<tr>
 		<td class="tdLeft">W07: 10/17</td>
 		<td class="tdMid">
-			期中作業一展示週<br>
+			線上非同步授課：<a href="https://geniusturtle6174.github.io/tutor_python">Comprehension；Zip、map，與 filter；模組；字串</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			隨堂練習 06<br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W08: 10/24</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
-			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字串</a><br>
+			期中作業一展示週
 		</td>
 		<td class="tdRight">
 			&nbsp;
@@ -143,8 +143,7 @@
 	<tr>
 		<td class="tdLeft">W09: 10/31</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">Numpy</a><br>
-			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">檔案</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
 		</td>
 		<td class="tdRight">
 			&nbsp;
@@ -154,7 +153,8 @@
 	<tr>
 		<td class="tdLeft">W10: 11/07</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">Numpy；二維繪圖</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">檔案</a><br>
 		</td>
 		<td class="tdRight">
 			&nbsp;
@@ -164,18 +164,18 @@
 	<tr>
 		<td class="tdLeft">W11: 11/14</td>
 		<td class="tdMid">
-			期中作業二展示週
+			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念</a>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			期中作業二
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W12: 11/21</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
-			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念</a>
+			期中作業二展示週
 		</td>
 		<td class="tdRight">
 			&nbsp;
