--- a/24f_math/hwmt1-2.htm
+++ b/24f_math/hwmt1-2.htm
@@ -9,10 +9,10 @@
 	<link href="shCore.css" rel="stylesheet" type="text/css" />
 	<link href="shThemeDefault.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript">
-		input = prompt('Enter passwrd:')
-		if(input!='0800092000'){
-			document.removeChild(document.documentElement);
-		}
+		// input = prompt('Enter passwrd:')
+		// if(input!='0800092000'){
+		// 	document.removeChild(document.documentElement);
+		// }
 		SyntaxHighlighter.all();
 	</script>
 </head>
