--- a/24f_math/hwmt1.htm
+++ b/24f_math/hwmt1.htm
@@ -20,8 +20,8 @@
 	<li>Deadline: 10/21 08:00</li>
 	<li>繳交方式: eeclass 作業上傳區，檔名規定詳如各題說明</li>
 	<li>Demo 時間地點: 10/24 原上課時段於原教室，另視情況使用課前與課後時段</li>
-	<li>Pylint Bonus: 5 分</li>
-	<li>Speed Bonus: 5 分</li>
+	<li>Pylint Bonus: 5 分，依程式執行時間長短之排名給分</li>
+	<li>Speed Bonus: 5 分，依工具評定之程式碼風格分數給分</li>
 	<li>評分方式: 各題滿分皆為 100，本作業總分為 (&Sigma;<sub>i</sub>(第 i 題正確性 * 第 i 題 demo / 100)) / 4 + Pylint Bonus + Speed Bonus</li>
 </ul>
 
@@ -62,6 +62,7 @@
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
 	<li>每題給分最小單位為一組測資，一組測資包含多筆（一筆為一個輸入&輸出的配對），每組的所有測資全對，才會拿到該組測資的分數。</li>
+	<li>LeetCode 題之給分仍依課程測資為準。雖然課程測資未必會比 LeetCode 的測資嚴格，但仍建議各位不要打賭，亦即請先獲得 LeetCode Accepted 之後再交作業。</li>
 	<li>Pylint Bonus
 		<ul>
 			<li>每題評分指令皆為「pylint --disable=C0103,C0111,C0114,C0116,C0301,C1801,R0903,R0911,R1705 your_file.py」。評分結果以教師安裝的版本(3.3.0)為準。</li>
