--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -123,10 +123,11 @@
 	<tr>
 		<td class="tdLeft">W07: 10/17</td>
 		<td class="tdMid">
-			線上非同步授課：<a href="https://geniusturtle6174.github.io/tutor_python">Comprehension；Zip、map，與 filter；模組；字串</a><br>
+			線上非同步授課：<a href="https://geniusturtle6174.github.io/tutor_python">Comprehension；Zip、map，與 filter</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">模組；字串</a><br>
 		</td>
 		<td class="tdRight">
-			隨堂練習 06<br>
+			<a href="pr06.htm">隨堂練習 06</a><br>
 		</td>
 	</tr>
 
