--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -147,7 +147,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr07.htm">隨堂練習 07</a><br>
 		</td>
 	</tr>
 
