Update progress for typhoon

--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -144,7 +144,7 @@
 	<tr>
 		<td class="tdLeft">W09: 10/31</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
+			颱風假，線上非同步授課：<a href="https://geniusturtle6174.github.io/tutor_python">Numpy</a><br>
 		</td>
 		<td class="tdRight">
 			<a href="pr07.htm">隨堂練習 07</a><br>
@@ -154,11 +154,10 @@
 	<tr>
 		<td class="tdLeft">W10: 11/07</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">Numpy；二維繪圖</a><br>
-			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">檔案</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr08.htm">隨堂練習 08</a><br>
 		</td>
 	</tr>
 
@@ -166,9 +165,10 @@
 		<td class="tdLeft">W11: 11/14</td>
 		<td class="tdMid">
 			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
-			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念</a>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">檔案</a><br>
 		</td>
 		<td class="tdRight">
+			隨堂練習 09<br>
 			期中作業二
 		</td>
 	</tr>
