--- a/24f_math/pr07.htm
+++ b/24f_math/pr07.htm
@@ -17,17 +17,16 @@
 <p style="background-color:#9f9;text-align:center;font-size:17pt">隨堂練習 07</p>
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
-<p>每題 35 分，最高採計至 100 分。</p>
+<p>解出一題 70 分，兩題都解出得 100 分。</p>
 <ul>
-	<li>請使用教材的 gcd 範例，繪製「你的學號的末兩碼 * 6」與 60 計算 gcd 的遞迴樹。例如若學號末兩碼為 16，則應繪製 gcd(16*6, 60) 的遞迴樹。提示：樹的長相應該會跟階乘的範例很像。</li>
-	<li>請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/sort-even-and-odd-indices-independently">2164. Sort Even and Odd Indices Independently</a>。</li>
-	<li>請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/bulb-switcher">319. Bulb Switcher</a>。本題允許 import math。</li>
+	<li><a href="pr07_01.htm">Are Math Students Strange?</a>。</li>
+	<li>請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/check-if-matrix-is-x-matrix/">2319. Check if Matrix Is X-Matrix</a>。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>Demo 排隊表單請點<a href="https://forms.gle/Lddn1V1o85zB6gXz6">此處</a>。</li>
+	<li>請於 11/04 08:00 前，在 eeclass 的測驗區內作答完畢。若你繳交後認為自己的回答有誤，在時限內可隨時重做。</li>
 </ul>
 
 </body></html>
