--- a/24f_math/hwmt1.htm
+++ b/24f_math/hwmt1.htm
@@ -4,24 +4,18 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel=stylesheet type="text/css" href="myCss.css">
 	<base target="_blank">
-	<script type="text/javascript">
-		// input = prompt('Enter passwrd:')
-		// if(input!='0800092000'){
-		// 	document.removeChild(document.documentElement);
-		// }
-	</script>
 </head>
 <body bgcolor="#ccccff">
 
-<p style="background-color:#9f9;text-align:center;font-size:17pt">期中作業</p>
+<p style="background-color:#9f9;text-align:center;font-size:17pt">期中作業一</p>
 
 <p style="background-color:#f99;font-size:17pt">作業資訊</p>
 <ul>
 	<li>Deadline: 10/21 08:00</li>
 	<li>繳交方式: eeclass 作業上傳區，檔名規定詳如各題說明</li>
 	<li>Demo 時間地點: 10/24 原上課時段於原教室，另視情況使用課前與課後時段</li>
-	<li>Pylint Bonus: 5 分，依程式執行時間長短之排名給分</li>
-	<li>Speed Bonus: 5 分，依工具評定之程式碼風格分數給分</li>
+	<li>Speed Bonus: 5 分，依程式執行時間長短之排名給分</li>
+	<li>Pylint Bonus: 5 分，依工具評定之程式碼風格分數給分</li>
 	<li>評分方式: 各題滿分皆為 100，本作業總分為 (&Sigma;<sub>i</sub>(第 i 題正確性 * 第 i 題 demo / 100)) / 4 + Pylint Bonus + Speed Bonus</li>
 </ul>
 
