--- a/24f_math/hwmt2.htm
+++ b/24f_math/hwmt2.htm
@@ -5,10 +5,10 @@
 	<link rel=stylesheet type="text/css" href="myCss.css">
 	<base target="_blank">
 	<script type="text/javascript">
-		// input = prompt('Enter passwrd:')
-		// if(input!='0800092000'){
-		// 	document.removeChild(document.documentElement);
-		// }
+		input = prompt('Enter passwrd:')
+		if(input!='0800092000'){
+			document.removeChild(document.documentElement);
+		}
 	</script>
 </head>
 <body bgcolor="#ccccff">
