--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -168,7 +168,7 @@
 			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">檔案</a><br>
 		</td>
 		<td class="tdRight">
-			隨堂練習 09<br>
+			<a href="pr09.htm">隨堂練習 09</a><br>
 			期中作業二
 		</td>
 	</tr>
