--- a/24f_math/pr08.htm
+++ b/24f_math/pr08.htm
@@ -4,13 +4,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel=stylesheet type="text/css" href="myCss.css">
 	<base target="_blank">
-	<script type="text/javascript" src="shCore.js"></script>
-	<script type="text/javascript" src="shBrushPython.js"></script>
-	<link href="shCore.css" rel="stylesheet" type="text/css" />
-	<link href="shThemeDefault.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript">
-		SyntaxHighlighter.all();
-	</script>
 </head>
 <body bgcolor="#ccccff">
 
@@ -21,7 +14,7 @@
 <ul>
 	<li>請使用教材的 gcd 範例，繪製「你的學號的末兩碼 * 6」與 60 計算 gcd 的遞迴樹。例如若學號末兩碼為 16，則應繪製 gcd(16*6, 60) 的遞迴樹。提示：樹的長相應該會跟階乘的範例很像。</li>
 	<li>請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/sort-even-and-odd-indices-independently">2164. Sort Even and Odd Indices Independently</a>。</li>
-	<li>請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/bulb-switcher">319. Bulb Switcher</a>。本題允許 import math。</li>
+	<li>請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/bulb-switcher">319. Bulb Switcher</a>。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
