--- a/24f_math/hwmt2-1.htm
+++ b/24f_math/hwmt2-1.htm
@@ -9,10 +9,10 @@
 	<link href="shCore.css" rel="stylesheet" type="text/css" />
 	<link href="shThemeDefault.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript">
-		// input = prompt('Enter passwrd:')
-		// if(input!='0800092000'){
-		// 	document.removeChild(document.documentElement);
-		// }
+		input = prompt('Enter passwrd:')
+		if(input!='0800092000'){
+			document.removeChild(document.documentElement);
+		}
 		SyntaxHighlighter.all();
 	</script>
 </head>
@@ -38,7 +38,7 @@
 2, 11
 
 <p style="background-color:#f99;font-size:17pt">Sample Output</p>
-<span data-explain="或 [i, 1, -1, -i, -1, i, -i, i, -i, -1, -i]">[1, -1, -1, 1, -1, 1, <span style="font-size: 0px;">-</span>1, -1, -1, 1, <span style="font-size: 0px;">-</span>1]</span>
+<span data-explain="或 [i, 1, -1, -i, -1, i, -i, i, -i, -1, -i]">[1, -1, -1, 1, -1, <span style="font-size: 0px;">-</span>1, 1, -1, -1, <span style="font-size: 0px;">-</span>1, 1]</span>
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
