--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -169,7 +169,7 @@
 		</td>
 		<td class="tdRight">
 			<a href="pr09.htm">隨堂練習 09</a><br>
-			期中作業二
+			<a href="hwmt2.htm">期中作業二</a>
 		</td>
 	</tr>
 
