--- a/24f_math/hwmt2.htm
+++ b/24f_math/hwmt2.htm
@@ -28,7 +28,7 @@
 
 <ul>
 	<li><a href="hwmt2-1.htm">Q1: Try to Survive</a>。</li>
-	<li><a href="hwmt2-2.htm">Q2: ...</a>。</li>
+	<li><a href="hwmt2-2.htm">Q2: Conway's Game of Life</a>。</li>
 	<li>Q3: 請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/count-days-spent-together/">2409. Count Days Spent Together</a>。
 		<ul>
 			<li>檔名必須為「q3_你的學號.py」，例如 q3_9962816.py。</li>
@@ -51,7 +51,7 @@
 <ul>
 	<li>每題給分最小單位為一組測資，一組測資包含多筆（一筆為一個輸入&輸出的配對），每組的所有測資全對，才會拿到該組測資的分數。</li>
 	<li>LeetCode 題之給分仍依課程測資為準。雖然課程測資未必會比 LeetCode 的測資嚴格，但仍建議各位不要打賭，亦即請先獲得 LeetCode Accepted 之後再交作業。</li>
-	<li>檔案內若有任何不屬於 function（前兩題）或 class（後兩題） 中的程式碼，應包含在「if __name__ == '__main__':」當中，否則會有折扣。</li>
+	<li>檔案內若有任何不屬於 function（前兩題）或 class（後兩題） 中的程式碼，除題目另有說明外，應包含在「if __name__ == '__main__':」當中，否則會有折扣。</li>
 	<li>Pylint Bonus
 		<ul>
 			<li>每題評分指令皆為「pylint --disable=C0103,C0111,C0114,C0116,C0301,C1801,R0903,R0911,R1705 your_file.py」。評分結果以教師安裝的版本(3.3.0)為準。</li>
@@ -59,7 +59,7 @@
 			<li>若在任一題的程式碼中，有試圖關閉或避開評分指令未列出的評比項目等行為時，本 bonus 不給分。</li>
 		</ul>
 	</li>
-	<li>若遇有數學符號等方面之顯示差異，以課程網頁在 Windows 電腦版 Chrome 或 Edge 瀏覽器最新版開啟時之顯示效果為準。</li>
+	<li>若遇有數學符號或敘述等方面之顯示差異，以課程網頁在 Windows 電腦版 Chrome 或 Edge 瀏覽器最新版開啟時之顯示效果為準。</li>
 </ul>
 
 </body></html>
