--- a/24f_math/hwmt2-1.htm
+++ b/24f_math/hwmt2-1.htm
@@ -67,6 +67,11 @@ if __name__ == '__main__':
 	pass
 </pre>
 	</li>
+	<li>雖然全域變數依規定是不允許使用，但若你要達到類似效果，可以新增一些預設參數，例如可以把函式定義改為如下：
+<pre class="brush: py">
+def try_to_survive(n, s, extra_param=None):
+</pre>
+	</li>
 </ul>
 
 </body></html>
