--- a/24f_math/pr09.htm
+++ b/24f_math/pr09.htm
@@ -23,7 +23,7 @@
 		<ul>
 			<li>c 的實軸和虛軸都建議在 [-2, 2] 之間取點，例如 np.linspace(-2, 2, 101)</li>
 			<li>可以只算到 n = 50 或 100（即 z<sub>50</sub> 或 z<sub>100</sub>），若其中任何一個 z<sub>i</sub> &gt; 2 則視為會發散，反之則視為不發散。</li>
-			<li>可以參考「complex」，以在程式中進行複數的建立與運算。</li>
+			<li>可以參考「complex」模組，以在程式中進行複數的建立與運算。</li>
 		</ul>
 	</li>
 	<li>Restricted chaos game。請依照下列步驟畫圖：
@@ -41,8 +41,8 @@
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>Demo 排隊表單請點<a href="#">此處</a>。</li>
-	<li>本週題目皆允許使用 numpy 和 matplotlib。</li>
+	<li>Demo 排隊表單請點<a href="https://forms.gle/kcJeUCQVmd4pNpFf6">此處</a>。</li>
+	<li>本週題目皆請使用 numpy 和 matplotlib。</li>
 </ul>
 
 </body></html>
