update pylint bonus rule

--- a/24f_math/hwmt2.htm
+++ b/24f_math/hwmt2.htm
@@ -55,7 +55,7 @@
 	<li>Pylint Bonus
 		<ul>
 			<li>每題評分指令皆為「pylint --disable=C0103,C0111,C0114,C0116,C0301,C1801,R0903,R0911,R0912,R1705,W0102 your_file.py」。評分結果以教師安裝的版本(3.3.0)為準。</li>
-			<li>每題給分方式為 max(pylint-score, 0)，整體分數取各題分數最小值乘以 0.35 加第二小值乘以 0.15。</li>
+			<li>每題給分方式為 max(pylint-score, 0)，整體分數取各題分數最小值乘以 0.4 加最大值乘以 0.1。</li>
 			<li>若在任一題的程式碼中，有試圖關閉或避開評分指令未列出的評比項目等行為時，本 bonus 不給分。</li>
 		</ul>
 	</li>
