rm pwd & update ratio

--- a/24f_math/pr09.htm
+++ b/24f_math/pr09.htm
@@ -17,7 +17,7 @@
 <p style="background-color:#9f9;text-align:center;font-size:17pt">隨堂練習 09</p>
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
-<p>解出一題 60 分，兩題都解出得 100 分。</p>
+<p>參加快問快答 10 分，以下每題各 45 分，共 100 分。</p>
 <ul>
 	<li>Mandelbrot set。考慮算式 z<sub>n</sub> = z<sub>n-1</sub><sup>2</sup> + c，其中 c 為複數平面上一點，且 z<sub>0</sub> = 0 時，Mandelbrot set 為使 z<sub>n</sub> 不發散的所有 c 的集合。請選取一些 c 以及計算相對應的 z<sub>n</sub>，並將其中所有可讓 z<sub>n</sub> 不會發散的 c 畫出來。提示：
 		<ul>
