Update case rules

--- a/24f_math/hwmt2-1.htm
+++ b/24f_math/hwmt2-1.htm
@@ -42,7 +42,7 @@
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
-	<li>測資只有一組。</li>
+	<li>測資有兩組，其中一組保證有能存活的走法。此外，所有測資的 n 都不會太大，以便讓程式能在合理時間內跑完。</li>
 	<li>程式架構範例如下，建議只修改標為 pass 的地方，否則若影響自動批改時，可能會有折扣：
 <pre class="brush: py">
 def try_to_survive(n, s):
