--- a/24f_math/hwmt2-2.htm
+++ b/24f_math/hwmt2-2.htm
@@ -58,7 +58,7 @@
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
 	<li>本題應使用 numpy。</li>
-	<li>測資只有一組。</li>
+	<li>測資有四組。其中有兩組保證 m-by-n 矩陣的 m 和 n 皆大於等於 5，且所有活細胞皆位在 index i 為 2 至 m - 3 與 j 為 2 至 n - 3 的範圍內；另外有一組保證 m-by-n 矩陣的 m 和 n 皆大於等於 3。</li>
 	<li>程式架構範例如下，建議只修改標為 pass 的地方，否則若影響自動批改時，可能會有折扣：
 <pre class="brush: py">
 import numpy as np
