--- a/24f_math/hwmt2.htm
+++ b/24f_math/hwmt2.htm
@@ -33,7 +33,7 @@
 		<ul>
 			<li>檔名必須為「q3_你的學號.py」，例如 q3_9962816.py。</li>
 			<li>Class 及 function 格式請依 LeetCode 規定。</li>
-			<li>本課程評分用測資僅一組，內容符合 LeetCode 之規定。</li>
+			<li>本課程評分用測資有四組，內容皆符合 LeetCode 之規定，且其中有一組保證兩人的到達與離開日期都在同一個月，另外有一組保證兩人的到達與離開日期都是某月一號。</li>
 		</ul>
 	</li>
 	<li>Q4: 請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/first-completely-painted-row-or-column/">2661. First Completely Painted Row or Column</a>。
