--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -186,17 +186,18 @@
 	<tr>
 		<td class="tdLeft">W13: 11/28</td>
 		<td class="tdMid">
-			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念；最近鄰居法</a>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念；最近鄰居法</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr10.htm">隨堂練習 10</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W14: 12/05</td>
 		<td class="tdMid">
-			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">最近鄰居法；線性回歸</a><br>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">線性回歸；特徵降維（線性降維：PCA）</a><br>
+			<a href="examRules.htm">期末測驗規則</a>
 		</td>
 		<td class="tdRight">
 			&nbsp;
@@ -206,9 +207,7 @@
 	<tr>
 		<td class="tdLeft">W15: 12/12</td>
 		<td class="tdMid">
-			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">特徵降維；類神經網路</a><br>
 			音訊處理：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本處理</a><br>
-			<a href="#">期末測驗規則</a>
 		</td>
 		<td class="tdRight">
 			&nbsp;
