Update exam rules

--- a/24f_math/examRules.htm
+++ b/24f_math/examRules.htm
@@ -32,9 +32,9 @@
 			<ul>
 				<li>12/05 上課時發予答案卷，12/12 上課時交回（選擇不帶筆記者應填寫封面後交回）</li>
 				<li>12/05 上課時未領卷、12/12 上課時未交回，或者封面資料未填者，不得使用筆記</li>
-				<li>定義翻開後左邊為第一頁，右邊為第二頁（後續依此類推）時，建議撰寫範圍為第七頁起至封底。如果想要賭「答案不會占太多空間」的話，可以往前多用一些空間；但考試時，答案卷不會因此給予加頁，且若造成答案辨識不易時也會扣分</li>
+				<li>建議撰寫範圍為封底及封底裡。如果想要賭「答案不會占太多空間」的話，可以往前多用一些空間；但考試時，答案卷不會因此給予加頁，且若造成答案辨識不易時也會扣分</li>
 				<li>作答內容不得跟筆記夾雜，教師認定筆記開始後之內容不會被批改</li>
-				<li>可以有合理之修正或塗改痕跡，但不得有黏貼、浮貼等行為，亦不得將修正工具以刮刮樂等方式利用</li>
+				<li>可以有合理之修正或塗改痕跡，但不得有黏貼、浮貼等行為</li>
 				<li>閱讀筆記時，除了普通的眼鏡以外，不得使用自行攜入之電氣或光學設備</li>
 			</ul>
 		</li>
@@ -45,6 +45,7 @@
 	<li>其他注意事項</li>
 	<ul>
 		<li>依照座位表入座</li>
+		<li>題目卷預計採單面印刷，若需計算及打草稿時，能且只能使用題目卷，不得自行攜帶計算紙，不建議使用答案卷</li>
 		<li>考試結果會盡可能於兩天內宣布，並開始會有較密集的成績確認通知，請務必留意</li>
 	</ul>
 	<br>
