--- a/24f_math/index.htm
+++ b/24f_math/index.htm
@@ -200,7 +200,7 @@
 			<a href="examRules.htm">期末測驗規則</a>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr11.htm">隨堂練習 11</a><br>
 		</td>
 	</tr>
 
@@ -210,7 +210,8 @@
 			音訊處理：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本處理</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr12.htm">隨堂練習 12</a><br>
+			<a href="selfpr02.htm">自我練習 02</a><br>
 		</td>
 	</tr>
 
