--- a/24f_math/pr12.htm
+++ b/24f_math/pr12.htm
@@ -12,7 +12,7 @@
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
 	<li>(50%)參加快問快答。不方便參加者應另行登記到課或事先請假</li>
-	<li>(50%)親自或委託他人繳回寫完筆記之答案卷</li>
+	<li>(50%)親自或委託他人繳回寫完筆記且封面已簽名之答案卷</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
