--- a/24f_math/selfpr02.htm
+++ b/24f_math/selfpr02.htm
@@ -11,11 +11,11 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述</p>
 <ul>
-	<li>請下載<a href="#">此音檔</a>，用 Python 讀取之，並進行以下工作：
+	<li>請下載<a href="pics/selfpr02.wav">此音檔</a>，用 Python 讀取之，並進行以下工作：
 		<ul>
 			<li>回答其取樣率、根據取樣率以及訊號點數計算其時間長度，並與作業系統或音訊播放軟體顯示的長度做比對</li>
 			<li>承上，假設已知每個取樣點是 16 bit，請據此計算其檔案大小（記得加上 header size） ，並比對是否與實際值相符</li>
-			<li>任取一小段，計算其音高。建議從第 ### 個取樣點開始，取 1024 個點做為那一小段；並且，你計算出來的音高值應該要在 ### Hz 到 ## Hz 之間</li>
+			<li>任取一小段，計算其音高。建議從第 4000 個取樣點開始，取 256 個點做為那一小段；並且，你計算出來的音高值應該要在 435 Hz 到 455 Hz 之間</li>
 		</ul>
 	</li>
 </ul>
