--- a/24f_math/pr11.htm
+++ b/24f_math/pr11.htm
@@ -22,7 +22,7 @@
 
 <ul>
 	<li>本週題目皆請使用 numpy、matplotlib 以及 sklearn。</li>
-	<li>本週題目預計於 W15 再 demo，排隊區請<a href="https://forms.gle/2xupvdYSnX26zUwT9">點此</a>，屆時請預備好程式碼並攜帶至課堂。</li>
+	<li>本週題目預計於 W15 再 demo，屆時請預備好程式碼並攜帶至課堂，並至 eeclass 作業區繳交後，等待老師或助教叫號。</li>
 </ul>
 
 </body></html>
