--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -1,1 +1,222 @@
+<html>
+<head>
+	<title>MATH172000--程式設計二</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel=stylesheet type="text/css" href="myCss.css">
+	<base target="_blank">
+	<script type="text/javascript" src="myJs.js"></script>
+</head>
 
+<body bgcolor="#ccccff">
+
+<center>
+
+<span class="myTitle">
+	MATH172000 程式設計二<br>
+	R7R8R9 綜三 315<br>
+</span>
+<br>
+<table cellspacing="0" border=0>
+	<tr>
+		<td width=49% align=center>
+			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a><br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
+		</td>
+		<td width=49% align=center>
+			<span class="myTitle">助教：未定<br><script>emailDisplay("unknown", "unknown", "com");</script></span>
+		</td>
+	</tr>
+</table>
+
+<br>
+<hr/>
+
+<table class="otherInfo" cellspacing="0">
+	<tr><th align="left" colspan=2 style="border-bottom-width:2;border-bottom-color:black">課程公布欄</th></tr>
+	<tr><th class="thLeft" align=center>發佈日期</th><th class="thRight" align=center>內容</th></tr>
+	<tr>
+		<td class="tdLeft">01/01</td>
+		<td class="tdRight">
+			<ul>
+				<li>eeclass 連結：<a href="">暫無</a></li>
+				<li>進度細節會視情況調整，隨堂練習及作業未於課堂正式宣布前皆為暫定。</li>
+			</ul>
+		</td>
+	</tr>
+</table>
+
+<br><br>
+
+<table class="otherInfo" cellspacing="0">
+	<tr><th align="left" colspan=3 style="border-bottom-width:2;border-bottom-color:black">課程進度表</th></tr>
+	<tr>
+		<th class="thLeft" align=center>課程日期</th>
+		<th class="thRight" align=center colspan=2>概要</th>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W01: 02/20</td>
+		<td class="tdMid">
+			<a href="courseIntro.htm">課程簡介</a><br>
+		</td>
+		<td class="tdRight">
+			<a href="prAndHwRules.htm">課後練習及作業總則</a><br>
+			<a href="pr01.htm">課後練習 01</a><br>
+			<a href="hwit.htm">期初作業</a><br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W02: 02/27</td>
+		<td class="tdMid">
+			期初作業展示週<br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W03: 03/06</td>
+		<td class="tdMid">
+			質數篩法</a>
+		</td>
+		<td class="tdRight">
+			課後練習 02<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W04: 03/13</td>
+		<td class="tdMid">
+			矩陣運算<br>
+		</td>
+		<td class="tdRight">
+			課後練習 03<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W05: 03/20</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_python">動態規劃</a><br>
+		</td>
+		<td class="tdRight">
+			課後練習 04<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W06: 03/27</td>
+		<td class="tdMid">
+			梯度下降<br>
+		</td>
+		<td class="tdRight">
+			課後練習 05<br>
+			期中作業
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W07: 04/03</td>
+		<td class="tdMid">
+			兒童節補假<br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W08: 04/10</td>
+		<td class="tdMid">
+			期中作業展示週
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+	
+	<tr>
+		<td class="tdLeft">W09: 04/17</td>
+		<td class="tdMid">
+			機器學習複習：基本概念、最近鄰居法<br>
+		</td>
+		<td class="tdRight">
+			課後練習 06<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W10: 04/24</td>
+		<td class="tdMid">
+			機器學習複習：線性回歸、特徵降維<br>
+		</td>
+		<td class="tdRight">
+			課後練習 07<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W11: 05/01</td>
+		<td class="tdMid">
+			機器學習：類神經網路<br>
+		</td>
+		<td class="tdRight">
+			課後練習 08<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W12: 05/08</td>
+		<td class="tdMid">
+			機器學習：類神經網路
+		</td>
+		<td class="tdRight">
+			課後練習 09<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W13: 05/15</td>
+		<td class="tdMid">
+			機器學習：支撐向量機<br>
+		</td>
+		<td class="tdRight">
+			課後練習 10<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W14: 05/22</td>
+		<td class="tdMid">
+			機器學習：支撐向量機、決策樹</a>
+		</td>
+		<td class="tdRight">
+			課後練習 11<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W15: 05/29</td>
+		<td class="tdMid">
+			機器學習：決策樹<br>
+		</td>
+		<td class="tdRight">
+			課後練習 12<br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W16: 06/05</td>
+		<td class="tdMid">
+			期末專案展示週<br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+</table>
+<br>
+</center>
+</body></html>
