Update pr and hw

--- a/25s_math/courseIntro.htm
+++ b/25s_math/courseIntro.htm
@@ -9,8 +9,8 @@
 <body bgcolor="#ccccff">
 
 <ul>
-	<li>本課程將接續「11310MATH171001 程式設計一」上課，同學必須先有 Python 語言及重要函式庫的相關基礎，例如條件判斷、迴圈、自訂函式、模組、字串處理、comprehension、numpy、matplotlib 等，並且應有 LeetCode 的解題經驗；欠缺相關基礎者，應自行想辦法補上進度，或者考慮退選。</li><br>
-	<li>本課程（程式設計二）將不會像「程式設計一」一樣仔細講解語法，例如一段印出九九乘法表的程式，本課程在多數情況下，只會告訴你這段程式可以印出九九乘法表，而不會說明為什麼可以印；並且本課程會要求各位有能力自行閱讀重要函式庫的相關文件，例如某個 numpy 或 scikit-learn 函式的用法。</li><br>
+	<li>本課程將接續「11310MATH171001 程式設計一」上課，同學必須先有 Python 語言及重要函式庫的相關基礎，例如條件判斷、迴圈、自訂函式、模組、字串處理、comprehension、numpy、matplotlib 等，並且應有 LeetCode 的解題經驗；<b>欠缺相關基礎者，應自行想辦法補上進度，或者考慮退選</b>。</li><br>
+	<li><b>本課程將不會像「程式設計一」一樣仔細講解語法</b>，例如一段印出九九乘法表的程式，本課程在多數情況下，只會告訴你這段程式可以印出九九乘法表，而不會說明為什麼可以印；並且<b>本課程會要求各位有能力自行閱讀重要函式庫的相關文件</b>，例如某個 numpy 或 scikit-learn 函式的用法。</li><br>
 	<li>評分標準
 		<ul>
 			<li>課後練習：52%，以所有隨堂練習之平均計分，預計 12 次。</li>
@@ -18,15 +18,27 @@
 			<li>期中作業：15%，以所有題目之平均計分，預計共 3 題。</li>
 			<li>期末專案：15%。評分項目包含程式碼、準確度、報告等。
 				<ul>
-					<li>報告預計佔期末專案的 50%~70%，即總成績的 7.5%~10.5%。此項目會設定一些基本規則，並依照教師主觀的高低評比來給分，合於基本規則者只會保障此項目及格，不能接受者請慎重考慮是否修課。</li>
+					<li>報告預計佔期末專案的 50%~70%，即總成績的 7.5%~10.5%。<b>此項目會設定一些基本規則，並依照教師主觀的高低評比來給分，合於基本規則者只會保障此項目及格，不能接受者請慎重考慮是否修課</b>。</li>
 				</ul>
 			</li>
 			<li>課堂互動：3%，發問、回答問題等等，以計次為原則，學期末依班級整體狀況換算為分數。</li>
 			<li>發問及回答之採計，以上課提出之技術性問題為主，討論區的內容視情形採計</li>
-			<li>互動以外之標準依「期初與期中作業每題，及期末專案每次相當於 3.5 次課後練習」為基礎設計，若題數或次數有顯著更動時，由教師提供選項給同學投票決定是否修改。</li>
+			<li>若練習或作業之題數或次數有顯著更動時，教師可能會提供選項給同學投票決定是否修改。</li>
 		</ul>
 	</li><br>
-	<li>教科書：以線上教材為主。本課程不指定教科書，但建議依個人閱讀偏好，來選擇紙本或電子書籍。</li><br>
+	<li>書籍
+		<ul>
+			<li>教科書：以線上教材為主。本課程不指定教科書，但建議依個人閱讀偏好，來持有紙本或電子書籍。</li>
+			<li>機器學習部分的參考書目如下
+				<ul>
+					<li>《零基礎入門的機器學習圖鑑》，作者： 秋庭伸也、杉山阿聖、寺田學，譯者： 周若珍，出版社：采實文化。書本內容約 50% 與本課程相關。</li>
+					<li>《機器學習的公式推導和程式實作》，作者： 魯偉，出版社：碁峰。書本內容約 45% 與本課程相關。</li>
+				</ul>
+			</li>
+		</ul>
+	</li><br>
+
+	<li><b>R6 或 Ra 沒有正課或演習課者，應保留相關時段予本課程，以配合練習、作業、專案之評分</b>。</li><br>
 	<li>其他注意事項
 		<ul>
 			<li>成績最高給至百分制 99，小數取整時除 [59, 60) 及 [89, 90) 區間為無條件捨去外，其餘為四捨五入。</li>
