--- a/25s_math/prAndHwRules.htm
+++ b/25s_math/prAndHwRules.htm
@@ -39,12 +39,14 @@
 
 	<li>Demo 時，需解釋程式與回答問題，視回答狀況給分。</li><br>
 
-	<li>程式碼必須撰寫於副檔名為 py 的純文字檔，並讓 Python 直接執行該文字檔。其他任何方式，包含但不限於開啟 Python 後逐行輸入者，或者使用 Jupyter Notebook 者，教師得不予採計其分數。</li>
+	<li><b>程式碼必須撰寫於副檔名為 py 的純文字檔，並讓 Python 直接執行該文字檔</b>。其他任何方式，包含但不限於開啟 Python 後逐行輸入者，或者使用 Jupyter Notebook 者，教師得不予採計其分數。</li>
 	<br>
 
-	<li>除題目允許外，禁止以「import」或其他任何方式載入函式庫。</li><br>
+	<li><b>除題目允許外，禁止以「import」或其他任何方式載入函式庫</b>。</li><br>
 
-	<li>若遇有數學符號、程式片段或題目敘述等方面之顯示差異，以課程網頁在 Windows 電腦版 Chrome 或 Edge 瀏覽器最新版開啟時之顯示效果為準。</li><br>
+	<li><b>若遇有數學符號、程式片段或題目敘述等方面之顯示差異，以課程網頁在 Windows 電腦版 Chrome 或 Edge 瀏覽器最新版開啟時之顯示效果為準</b>。</li><br>
+
+	<li>對於期初及期中作業，以及隔週繳交的課後練習，教師或助教可能會不定時實施「事前批改」，即提前告知你的繳交是否符合規格以及正確性如何。</li><br>
 
 	<!-- <li>因教師個人設備之系統因素，若遇有需上傳至 eeclass 等系統繳交之題目時（將主要是期中作業），請以 Python 3.6 語法，即教材中有出現的語法為主，並避免在該題目中使用 Python 3.7 以上之特殊語法，例如 type hint 與 match-case。</li>
 	<br> -->
