--- a/25s_math/index.htm
+++ b/25s_math/index.htm
@@ -22,7 +22,7 @@
 			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a><br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
 		</td>
 		<td width=49% align=center>
-			<span class="myTitle">助教：未定<br><script>emailDisplay("unknown", "unknown", "com");</script></span>
+			<span class="myTitle">助教：李思諭<br><script>emailDisplay("20sharon35", "gmail", "com");</script></span>
 		</td>
 	</tr>
 </table>
@@ -34,12 +34,25 @@
 	<tr><th align="left" colspan=2 style="border-bottom-width:2;border-bottom-color:black">課程公布欄</th></tr>
 	<tr><th class="thLeft" align=center>發佈日期</th><th class="thRight" align=center>內容</th></tr>
 	<tr>
-		<td class="tdLeft">01/01</td>
+		<td class="tdLeft" style="width:15%">02/20</td>
 		<td class="tdRight">
 			<ul>
-				<li>eeclass 連結：<a href="">暫無</a></li>
+				<li>eeclass 連結：<a href="https://eeclass.nthu.edu.tw/course/26380">https://eeclass.nthu.edu.tw/course/26380</a></li>
 				<li>進度細節會視情況調整，隨堂練習及作業未於課堂正式宣布前皆為暫定。</li>
 			</ul>
+		</td>
+	</tr>
+	<tr>
+		<td class="tdLeft">02/20</td>
+		<td class="tdRight">
+			加簽原則（公告至加退選教師簽核結束）
+			<ol>
+				<li value="0">下述之「選課」不含加退選，「原修生」指修過教師開設的程式設計一並及格者，「申請」指申請加簽。</li>
+				<li>若有在某幾次選課前告知教師，因不可抗力因素無法參加某幾次選課亂數，並經教師認可者，亦視同參加。</li>
+				<li>所有選課階段皆參加的原修生，且在 W01 上課前申請者，一律核准。</li>
+				<li>餘下者，若有課後練習 01 表現優良，且於 W01 課前已申請者，依下列優先順序，於 W01 課後至 W02 課前，隨時可能於選課人限未滿時核准：練習表現（不含問卷，佳者優先）、R6 或 Ra 沒有正課或演習課（已回報沒課堂數多者優先）、參加選課亂數次數（多者優先）、原修生（符合者優先）、早申請（早者優先）。</li>
+				<li>再餘下者，若有於 W02 課前申請者，於 W02 課後，依下列優先順序視狀況核准：作業成績（不含 bonus，高者優先）、練習成績（高者優先）、R6 或 Ra 沒有正課或演習課（已回報沒課堂數多者優先）、參加選課亂數次數（多者優先）、原修生（符合者優先）、早申請（早者優先）。</li>
+			</ol>
 		</td>
 	</tr>
 </table>
@@ -112,7 +125,7 @@
 		</td>
 		<td class="tdRight">
 			課後練習 05<br>
-			期中作業
+			<a href="hwmt.htm">期中作業</a>
 		</td>
 	</tr>
 
